Moving to edgecount based reranking for text search results

--- a/data/elasticsearchdump/dbentityindex11mapping.json
+++ b/data/elasticsearchdump/dbentityindex11mapping.json
@@ -1,5 +1,5 @@
 {
-	"dbentityindex10": {
+	"dbentityindex11": {
 		"mappings": {
 			"records": {
 				"properties": {
@@ -15,7 +15,10 @@
 						"type": "text",
 						"index_options": "docs",
 						"analyzer": "english"
-					}
+					},
+                                        "edgecount": {
+                                                "type":"integer"
+                                        }
 				}
 			}
 		}
