--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,121 @@
-absl-py==0.2.1
-astor==0.6.2
-backports.weakref==1.0.post1
-bitarray==0.8.1
-bleach==1.5.0
-boto==2.48.0
-boto3==1.7.25
-botocore==1.10.25
+annoy==1.16.2
+asn1crypto==0.24.0
+attrs==19.2.0
+backports-abc==0.5
+backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
+bitarray==1.0.1
+bleach==3.1.0
+boto==2.49.0
+boto3==1.10.8
+botocore==1.13.8
 bz2file==0.98
-certifi==2018.4.16
+certifi==2019.9.11
+cffi==1.13.1
 chardet==3.0.4
-click==6.7
-docutils==0.14
-editdistance==0.4
-elasticsearch==6.2.0
+Click==7.0
+configparser==4.0.2
+cryptography==2.1.4
+cycler==0.10.0
+Cython==0.29.13
+decorator==4.4.1
+defusedxml==0.6.0
+dnspython==1.16.0
+docutils==0.15.2
+elasticsearch==7.0.4
+entrypoints==0.3
 enum34==1.1.6
-Flask==1.0.2
-funcsigs==1.0.2
+eventlet==0.25.1
+Flask==1.1.1
+functools32==3.2.3.post2
 future==0.17.1
-futures==3.2.0
+futures==3.3.0
 fuzzywuzzy==0.17.0
-gast==0.2.0
-gensim==3.4.0
-gevent==1.2.2
-greenlet==0.4.13
-grpcio==1.12.0
-h5py==2.7.1
-html5lib==0.9999999
+gensim==3.8.1
+get==2019.4.13
+gevent==1.4.0
+greenlet==0.4.15
 idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-jmespath==0.9.3
-Keras==2.2.4
-Keras-Applications==1.0.6
-Keras-Preprocessing==1.0.5
-Markdown==2.6.11
-MarkupSafe==1.0
-mock==2.0.0
-nltk==3.3
-numpy==1.14.3
-pbr==4.0.3
+ipaddress==1.0.17
+ipykernel==4.10.1
+ipython==5.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isodate==0.6.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jmespath==0.9.4
+joblib==0.14.1
+jsonschema==3.0.2
+jupyter==1.0.0
+jupyter-client==5.3.3
+jupyter-console==5.2.0
+jupyter-core==4.5.0
+keyring==10.6.0
+keyrings.alt==3.0
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==2.2.4
+mistune==0.8.4
+monotonic==1.5
+nbconvert==5.6.0
+nbformat==4.4.0
+nltk==3.4.5
+notebook==5.7.8
+numpy==1.16.1
+pandocfilters==1.4.2
+pathlib2==2.3.5
+pexpect==4.7.0
+pickleshare==0.7.5
 pkg-resources==0.0.0
-practNLPTools==1.0
-protobuf==3.5.2.post1
+post==2019.4.13
+prometheus-client==0.7.1
+prompt-toolkit==1.0.16
+ptyprocess==0.6.0
+public==2019.4.13
 pybloom==1.1
-python-dateutil==2.7.3
+pycparser==2.19
+pycrypto==2.6.1
+Pygments==2.4.2
+pyparsing==2.4.2
+pyrsistent==0.15.4
+python-dateutil==2.8.0
 python-Levenshtein==0.12.0
-PyYAML==3.12
-requests==2.18.4
-s3transfer==0.1.13
-scikit-learn==0.19.1
-scipy==1.1.0
-six==1.11.0
+pytorch-transformers==1.2.0
+pytz==2019.2
+pyxdg==0.25
+pyzmq==18.1.0
+qtconsole==4.5.5
+query-string==2019.4.13
+rdflib==4.2.2
+regex==2020.1.8
+request==2019.4.13
+requests==2.22.0
+s3transfer==0.2.1
+sacremoses==0.0.38
+scandir==1.10.0
+scikit-learn==0.20.3
+scipy==1.2.1
+SecretStorage==2.3.1
+Send2Trash==1.5.0
+sentencepiece==0.1.85
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.12.0
 sklearn==0.0
-smart-open==1.5.7
-stop-words==2015.2.23.1
-tensorboard==1.8.0
-tensorflow==1.8.0
-termcolor==1.1.0
+smart-open==1.8.4
+sparql-client==3.4
+SPARQLWrapper==1.8.4
+subprocess32==3.5.4
+terminado==0.8.2
+testpath==0.4.2
 textblob==0.15.3
-torch==1.1.0
-urllib3==1.22
-Werkzeug==0.14.1
-xgboost==0.71
+torch==1.2.0
+tornado==5.1.1
+tqdm==4.42.0
+traitlets==4.3.2
+urllib3==1.25.3
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
