Updating pnel pip requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+absl-py==0.9.0
 annoy==1.16.2
 asn1crypto==0.24.0
+astor==0.8.1
 attrs==19.2.0
 backports-abc==0.5
 backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
+backports.weakref==1.0.post1
 bitarray==1.0.1
 bleach==3.1.0
 boto==2.49.0
@@ -27,14 +30,19 @@ entrypoints==0.3
 enum34==1.1.6
 eventlet==0.25.1
 Flask==1.1.1
+funcsigs==1.0.2
 functools32==3.2.3.post2
 future==0.17.1
 futures==3.3.0
 fuzzywuzzy==0.17.0
+gast==0.2.2
 gensim==3.8.1
 get==2019.4.13
 gevent==1.4.0
+google-pasta==0.1.8
 greenlet==0.4.15
+grpcio==1.27.1
+h5py==2.10.0
 idna==2.6
 ipaddress==1.0.17
 ipykernel==4.10.1
@@ -51,18 +59,23 @@ jupyter==1.0.0
 jupyter-client==5.3.3
 jupyter-console==5.2.0
 jupyter-core==4.5.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.1.0
+Markdown==3.1.1
 MarkupSafe==1.1.1
 matplotlib==2.2.4
 mistune==0.8.4
+mock==3.0.5
 monotonic==1.5
 nbconvert==5.6.0
 nbformat==4.4.0
 nltk==3.4.5
 notebook==5.7.8
 numpy==1.16.1
+opt-einsum==2.3.2
 pandocfilters==1.4.2
 pathlib2==2.3.5
 pexpect==4.7.0
@@ -71,6 +84,7 @@ pkg-resources==0.0.0
 post==2019.4.13
 prometheus-client==0.7.1
 prompt-toolkit==1.0.16
+protobuf==3.11.3
 ptyprocess==0.6.0
 public==2019.4.13
 pybloom==1.1
@@ -107,6 +121,10 @@ smart-open==1.8.4
 sparql-client==3.4
 SPARQLWrapper==1.8.4
 subprocess32==3.5.4
+tensorboard==1.15.0
+tensorflow-estimator==1.15.1
+tensorflow-gpu==1.15.0
+termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
 textblob==0.15.3
@@ -119,3 +137,4 @@ wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.16.0
 widgetsnbextension==3.5.1
+wrapt==1.11.2
