Updated readme and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,37 @@
 bitarray==1.2.1
+boto==2.49.0
+boto3==1.12.0
+botocore==1.15.0
+bz2file==0.98
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+docutils==0.15.2
 editdistance==0.5.3
 elasticsearch==7.5.1
 Flask==1.1.1
 future==0.18.2
+futures==3.3.0
 fuzzywuzzy==0.18.0
+gensim==3.8.1
 gevent==1.4.0
 greenlet==0.4.15
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
+jmespath==0.9.4
 MarkupSafe==1.1.1
 nltk==3.4.5
-numpy==1.16.6
-pkg-resources==0.0.0
-practNLPTools==1.0
+numpy==1.16.1
 pybloom==1.1
+python-dateutil==2.8.1
+python-Levenshtein==0.12.0
 requests==2.22.0
+s3transfer==0.3.3
 scipy==1.2.3
 singledispatch==3.4.0.3
 six==1.14.0
+smart-open==1.9.0
 torch==1.1.0
 urllib3==1.25.8
 Werkzeug==1.0.0
