--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,55 @@
+appdirs==1.4.3
 bitarray==1.2.1
 boto==2.49.0
 boto3==1.12.0
 botocore==1.15.0
 bz2file==0.98
+CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+colorama==0.4.3
+contextlib2==0.6.0
+distlib==0.3.0
+distro==1.4.0
 docutils==0.15.2
 editdistance==0.5.3
 elasticsearch==7.5.1
 Flask==1.1.1
 future==0.18.2
-futures==3.3.0
+futures==3.1.1
 fuzzywuzzy==0.18.0
 gensim==3.8.1
 gevent==1.4.0
 greenlet==0.4.15
+html5lib==1.0.1
 idna==2.8
+ipaddr==2.2.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
 jmespath==0.9.4
+lockfile==0.12.2
 MarkupSafe==1.1.1
+msgpack==0.6.2
 nltk==3.4.5
 numpy==1.16.1
-pybloom==1.1
+packaging==20.3
+pep517==0.8.2
+progress==1.5
+-e git+https://github.com/jaybaird/python-bloomfilter.git@2bbe01ad49965bf759e31781e6820408068862ac#egg=pybloom
+pyparsing==2.4.6
 python-dateutil==2.8.1
 python-Levenshtein==0.12.0
+pytoml==0.1.21
 requests==2.22.0
+retrying==1.3.3
 s3transfer==0.3.3
-scipy==1.2.3
+scipy==1.5.1
 singledispatch==3.4.0.3
 six==1.14.0
 smart-open==1.9.0
-torch==1.1.0
+torch==1.4.0
 urllib3==1.25.8
+webencodings==0.5.1
 Werkzeug==1.0.0
 xgboost==0.82
