--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ future==0.18.2
 futures==3.1.1
 fuzzywuzzy==0.18.0
 gensim==3.8.1
-gevent==1.4.0
+gevent==1.5a2
 greenlet==0.4.15
 html5lib==1.0.1
 idna==2.8
@@ -35,12 +35,15 @@ nltk==3.4.5
 numpy==1.16.1
 packaging==20.3
 pep517==0.8.2
+pntl==0.2.4
 progress==1.5
 -e git+https://github.com/jaybaird/python-bloomfilter.git@2bbe01ad49965bf759e31781e6820408068862ac#egg=pybloom
 pyparsing==2.4.6
 python-dateutil==2.8.1
+python-dotenv==0.10.3
 python-Levenshtein==0.12.0
 pytoml==0.1.21
+PyYAML==5.3.1
 requests==2.22.0
 retrying==1.3.3
 s3transfer==0.3.3
